--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@media (prefers-color-scheme: dark) {
+  .swiper-pagination-bullet {
+    background: #fff !important;
+  }
+  .swiper-pagination-bullet-active {
+    background: blueviolet !important;
+  }
+}
