--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
 @media (prefers-color-scheme: dark) {
   .swiper-pagination-bullet {
     background: #fff !important;
@@ -13,4 +15,16 @@
 
 .swiper-slide {
   height: auto !important;
+}
+
+body {
+  font-family: "Roboto", sans-serif !important;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.expirience-swiper .swiper-pagination {
 }
